# motohil-ogorod

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  deploy.sh  pyproject.toml  requirements.txt
config/: agent_system_prompt.md  settings.example.json  topics.json
docs/: API_ACCESS_CHECKLIST.md
src/motohill_ogrod/: __init__.py  config.py  main.py  render.py  story_agent.py  telegram.py  veo_generator.py
