[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motohill-ogrod"
version = "0.1.0"
description = "Motohill Polish rural comedy video automation."
requires-python = ">=3.9"
dependencies = [
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0"
]

[tool.setuptools.packages.find]
where = ["src"]

